2006-01-04  Don Allingham  <don@gramps-project.org>
	* src/FamlyView.py: enable menu buttons, siblings
	* src/PageView.py: move home function into this class
	* src/PersonView.py: move home function out of this class

2006-01-04  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/FamilyView.py: Handle active person == None
	
2006-01-04  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: fix place == None problem

2006-01-03  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: provide hyper links

2006-01-03  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayState.py (push): Typo.

2006-01-03  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: new format

2006-01-02  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: Show marriage data; Dont use a black border for
	living people
	* src/ViewManager.py (post_load): Request interface rebuild after
	upgrading the database 

2006-01-01 Eero Tamminen <eerot@sf>
	* doc/gramps.1.in: nroff and a couple of typo fixes

2005-12-30  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ReportUtils.py: Use new RelLib API
	* src/PedView.py: Use ReportUtils to generate text; highlight selected
	person; enable Tooltips; Optionally show peoples images; Some pixel
	shifting; Tooltips for child relations; Sibling with childs bold
	* src/plugins/TestcaseGenerator.py: Use new RelLib API
	* src/GrampsDb/_GrampsBSDDB.py (_update_reference_map): Dont crash if
	no_longer_required_references dont exist in the database
	
	
2005-12-29  Don Allingham  <don@gramps-project.org>
	* src/GrampsLocale.py: handle platform specific locale issues
	* src/DateDisplay.py: use GrampsLocale
	* src/DateParser.py: use GrampsLocale
	* src/DisplayModels.py: use GrampsLocale
	* src/Exporter.py: start conversion to Assistant
	* src/PeopleModel.py: use GrampsLocale
	* src/RecentFiles.py: fcntl option for broken platforms
	* src/StartupDialog.py: convert to Assistant
	* src/ViewManager.py: remove debug statement