@@ -1,4 +1,6 @@
 2006-01-04  Don Allingham  <don@gramps-project.org>
+	* src/DisplayView.py: Open/OpenRecent MenuToolButton goodness :-)
+	* src/ViewManager.py: Open/OpenRecent MenuToolButton goodness :-)
 	* src/FamlyView.py: enable menu buttons, siblings
 	* src/PageView.py: move home function into this class
 	* src/PersonView.py: move home function out of this class
